--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 <a href="index.html">
 <center><img src="img/logo.jpg" alt="My Website" 
 title="NFA Website - Welcome to my website"></center>
+<style>body {cursor:url(http://3.bp.blogspot.com/-wS62io5_7pQ/TscgaUByMkI/AAAAAAAACOM/H_pIwF2Kup0/s1600/bicarafarah-animated-ani9.gif), 
+url(http://3.bp.blogspot.com/-wS62io5_7pQ/TscgaUByMkI/AAAAAAAACOM/H_pIwF2Kup0/s1600/bicarafarah-animated-ani9.gif), auto;} </style>
+<a href="http://bicarafarah.blogspot.com" target=_blank><div style="height: 50px; width: 50px; position: absolute; top: 0px; left: 0px;"> </div></a>
 </a>
 </header>
 <hr><center>
@@ -24,8 +27,9 @@ title="NFA Website - Welcome to my website"></center>
 </table>
 </nav>
 <hr></center>
-<center><h1>WELCOME!</h1></center>
-<center><h1>It's such a pleasure to have you here in my website</h1></center>
+<center><marquee><h1>WELCOME!</h1></marquee></center>
+<h1><marquee behavior=alternate direction=up scrollamount=2 scrolldelay=65 height=80 style="Text-align;filter:wave(add=0,phase=1, freq=1,strength=15,color=.FFFFFF)">
+<center>It's such a pleasure to have you here in my website <br></center></marquee></h1>
 
 <center><img src="img/scenery.jpg" width="70%" height="80%"
 title="What a beautiful scenery illustration"></center>
@@ -50,3 +54,4 @@ good mental so that I can do this assignment with good conditions.
 Copyright &Copy; NFA Website 2022-2023
 </footer>
 </body>
+
